# car-damage-detection

./: README.md
api/: download_file.py  main.py  processing_opencv.py  pyproject.toml  requirements.txt  test.py
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  main.js
client/src/assets/: global.css
client/src/components/: ImageDiffResult.vue  ImageUploader.vue
