[tool.poetry]
name = "image-diff-check-backend"
version = "0.1.0"
description = ""
authors = ["ilaydaademoglu <ilayda.ademoglu@leanix.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
imutils = "^0.5.4"
python-multipart = "^0.0.12"
requests = "^2.32.3"
opencv-python-headless = "^4.10.0.84"
roboflow = "^1.1.47"
supervision = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
